[modified] composer file

--- a/src/composer.json
+++ b/src/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "peter/football-api",
+    "name": "peterthawng/football-api",
     "description": "Rapid Football API v3",
     "type": "project",
     "license": "MIT",
