--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "peterthawng/football-api",
+    "name": "peter/football-api",
     "description": "Rapid Football API v3",
     "license": "MIT",
     "require": {
